force-app/main/default/objects/Transfer_Credit__c/Transfer_Credit__c.object-meta.xml
<CustomObject>
    <description>Academic credits transferred from another institution. Data sourced from PS_TRNS_CRSE_SCH, PS_TRNS_CRSE_TERM, and PS_TRNS_CRSE_DTL tables &amp;/or Transcripts sent to other Inst as requested by student.</description>
    <label>Transfer Credit</label>
    <nameField>
        <label>Institution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>