force-app/main/default/objects/Transfer_Credit__c/fields/ASU_Course__c.field-meta.xml
<CustomField>
    <fullName>ASU_Course__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>ASU Subject and Course from PS_CRSE_OFFER</description>
    <label>ASU Course</label>
    <length>25</length>
    <type>Text</type>
</CustomField>