force-app/main/default/objects/Transfer_Credit__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transfer Credits</relationshipLabel>
    <relationshipName>Transfer_Credits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>