force-app/main/default/objects/Transfer_Credit__c/fields/Course_Taken__c.field-meta.xml
<CustomField>
    <fullName>Course_Taken__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Course Taken at from other institution from PS_CRSE_OFFER</description>
    <label>Course Taken</label>
    <length>25</length>
    <type>Text</type>
</CustomField>