force-app/main/default/objects/Transfer_Credit__c/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Date the transferred credit was posted to PeopleSoft from PS_CRSE_OFFER</description>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>