force-app/main/default/objects/Transfer_Credit__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Grade posted for transferred credit from PS_TRNS_CRSE_DTL</description>
    <label>Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>