force-app/main/default/objects/Transfer_Credit__c/fields/Grade_Points_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Grade_Points_per_Unit__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Grade points earned per unit transferred from PS_TRNS_CRSE_DTL</description>
    <label>Grade Points per Unit</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>