force-app/main/default/objects/Transfer_Credit__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term</label>
    <referenceTo>Term__c</referenceTo>
    <relationshipLabel>Transfer Credits</relationshipLabel>
    <relationshipName>Transfer_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>