force-app/main/default/objects/Transfer_Credit__c/fields/Units_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Units_Transferred__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Units transferred to ASU from PS_TRNS_CRSE_DTL</description>
    <label>Units Transferred</label>
    <precision>13</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>